添加蚂蚁动画的banner

--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -8,10 +8,7 @@
     <meta name="keywords" content="<%= htmlWebpackPlugin.options.keywords %>" >
     <meta name="description" content="<%= htmlWebpackPlugin.options.description %>" >
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,initial-scale=1.0,user-scalable=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_439523_1sqc3ybe87n45cdi.css">
-    <script type="text/javascript" src="http://api.map.baidu.com/getscript?v=2.0&ak=1NHwHQ3beTNTM5ughGVDKYc8zRbUXgEs"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
     <div id="root"></div>
