--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -9,6 +9,7 @@
     <meta name="description" content="<%= htmlWebpackPlugin.options.description %>" >
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,initial-scale=1.0,user-scalable=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_573292_9co338dxxcvoyldi.css">
 </head>
 <body>
     <div id="root"></div>
